# oda_api

./: .gitattributes  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CITATION.cff  CL.txt  Dockerfile  LICENSE.rst  MANIFEST.in  README.md  TestAPI.html  TestAPI.ipynb  TestAPI.rst  TestDispatcher.ipynb  Untitled.ipynb  bump-version.sh  codemeta.json  lc.root  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_docker.txt  requirements_doker.txt  setup.cfg  setup.py  test.fits
.github/styles/: vocab.txt
.github/workflows/: ci.yml  enforce-labels.yml  prose.yml  pypi-publish.yaml  python-package-live.yml  python-package.yml  python-publish.yml  run-notebook.yml  tag.yaml  version-bump-pr.yml
.ipynb_checkpoints/: TestAPI-checkpoint.ipynb
cdci_api_plugin/: api.py  isgri.py  polar.py
cdci_api_plugin/old/: isgri.py  polar.py
doc/: CL.txt  make_apidoc_and_uml_graphs.py  requirements.txt
doc/source/: conf.py  index.rst  install.rst
doc/source/api/: api.rst  data_products.rst  modules.rst  oda_api.api.DispatcherAPI.rst  oda_api.api.GalleryDispatcherAPI.rst  oda_api.api.NoTraceBackWithLineNumber.rst  oda_api.api.RemoteException.rst  oda_api.api.Request.rst  oda_api.api.RequestError.rst  oda_api.data_products.ApiCatalog.rst  oda_api.data_products.BinaryData.rst  oda_api.data_products.NumpyDataProduct.rst  oda_api.data_products.NumpyDataUnit.rst  oda_api.data_products.ODAAstropyTable.rst  oda_api.data_products._chekc_enc_data.rst  oda_api.data_products.sanitize_encoded.rst  oda_api.plot_tools.OdaImage.rst  oda_api.plot_tools.OdaLightCurve.rst  oda_api.rst  plot_tools.rst
doc/source/user_guide/: AsynchronousAPI.ipynb  Authentication.ipynb  Authentication.rst  GravitationalWaves.ipynb  LegacySurvey.ipynb  ProgressReporter.ipynb  ScienceWindowList.ipynb  Show_and_Save_Products.ipynb  TestAPI-checkpoint.ipynb  TestAPI.ipynb  TestAPI.rst  UpdateGallerySource.ipynb  UploadToGallery.ipynb  arf.fits  arf_n.fits  arf_test.fits  job-cycle.drawio  lc.root  rmf.fits  rmf_n.fits  rmf_test.fits  spec.fits  spec_n.fits  test.fits  tutorial.rst  tutorial_main.rst
doc/source/user_guide/.ipynb_checkpoints/: TestAPI-checkpoint.ipynb
oda_api/: __init__.py  api.py  cli.py  colors.py  custom_formatters.py  data_products.py  gallery_api.py  json.py  localcache.py  misc_helpers.py  ontology_helper.py  pkg_info.json  plot_tools.py  plot_tools_utils.py  secret.py  token.py
oda_api/tools/: __init__.py  integral.py  plot.py
tests/: conftest.py  test_basic.py  test_cli.py  test_compare_token.py  test_data_products.py  test_drupal.py  test_live.py  test_ontology.py  test_plot_tools.py  test_progress_report.py  test_remote.py  test_secret.py  test_sites.py  test_tools_integral.py
tests/observation_yaml_dummy_files/: obs_rev_2.yaml
tests/test_data/: isgri_rmf_Crab.fits  lc.fits
