[build-system]
requires = ["setuptools>=64",]
build-backend = "setuptools.build_meta"

[project]
name = "oda_api"
dynamic = ["version"]
description = "API plugin for CDCI online data analysis"
authors = [
    {name = "Andrea Tramacere", email = "contact@odahub.io"},
    {name = "Volodymyr Savchenko", email = "contact@odahub.io"}
]
maintainers = [
  {name = "Gabriele Barni", email = "contact@odahub.io"},
  {name = "Denys Savchenko", email = "contact@odahub.io"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "future",
    "astropy",
    "json_tricks",
    "matplotlib",
    "bokeh>3.0,<3.2",
    "numpy>=2.0 ; python_full_version >= '3.11'",
    "numpy<2.0 ; python_full_version < '3.11'",
    "jsonschema",
    "pyjwt",
    "astroquery>=0.4.4",
    "scipy",
    "rdflib",
    "black",
    "puremagic",
]

[project.optional-dependencies]
gw = [
    "gwpy",
    "ligo.skymap"
]

[project.scripts]
oda-api = "oda_api.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "oda_api.__version__"}

[tool.uv.sources]
cdci-data-analysis = { git = "https://github.com/oda-hub/dispatcher-app.git", branch = "numpy-gt-2" }

[dependency-groups]
dev = [
    "coverage>=7.10.5",
    "flake8>=7.3.0",
    "mypy>=1.17.1",
    "pylint>=3.3.8",
    "types-click>=7.1.8",
    "types-requests>=2.32.4.20250809",
    "types-simplejson>=3.20.0.20250822",
    "pytest-xdist[psutil]",
    "cdci-data-analysis",
    "papermill>=2.6.0",
    "ipykernel>=6.30.1",
]
