[build-system]
requires = ["setuptools>=64",]
build-backend = "setuptools.build_meta"

[project]
name = "oda_api"
version = "1.3.3"
description = "API plugin for CDCI online data analysis"
authors = [
    {name = "Andrea Tramacere", email = "contact@odahub.io"},
    {name = "Volodymyr Savchenko", email = "contact@odahub.io"}
]
maintainers = [
  {name = "Gabriele Barni", email = "contact@odahub.io"},
  {name = "Denys Savchenko", email = "contact@odahub.io"}
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.rst"]

dependencies = [
    "requests",
    "astropy>=6.1",
    "json_tricks",
    "matplotlib>=3.9.4", # for compatibility with gammapy==2.0.1 (requires mpl<3.10)
    "bokeh>3.0,<3.2",
    "numpy>=2.0 ; python_full_version >= '3.11'",
    "numpy<2.0 ; python_full_version < '3.11'",
    "jsonschema",
    "pyjwt",
    "astroquery>=0.4.4",
    "scipy",
    "rdflib",
    "puremagic",
    "click>=8.2.1",
]

[project.optional-dependencies]
gw = [
    "gwpy",
    "ligo.skymap"
]

[project.scripts]
oda-api = "oda_api.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.sources]
cdci-data-analysis = { git = "https://github.com/oda-hub/dispatcher-app.git", branch = "master", group="dev" }

[dependency-groups]
dev = [
    "coverage>=7.10.5",
    "flake8>=7.3.0",
    "mypy>=1.17.1",
    "pylint>=3.3.8",
    "types-click>=7.1.8",
    "types-requests>=2.32.4.20250809",
    "pytest-xdist[psutil]",
    "cdci-data-analysis",
    "papermill>=2.6.0",
    "ipykernel>=6.30.1",
    "isort>=6.0.1",
]
docs = [
    "furo>=2025.7.19",
    "nbsphinx>=0.9.7",
    "numpydoc>=1.9.0",
    "sphinx-automodapi>=0.20.0",
]
gammapy = [
    "gammapy>=2.0.1,<3.0.0"
]

[tool.bumpversion]
current_version = "1.3.3"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
commit = false

[[tool.bumpversion.files]]
filename = "doc/source/user_guide/TestAPI.ipynb"

[[tool.bumpversion.files]]
filename = "doc/source/user_guide/UploadToGallery.ipynb"

[[tool.bumpversion.files]]
filename = "doc/source/install.rst" 
